# sympy-rust

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: context.rs  lib.rs  prelude.rs  symbol.rs  utils.rs
src/core/: basic.rs  expr.rs  mod.rs  symbol.rs  wild.rs
src/core/symbol/: mod.rs  symbol.rs  wild.rs
tests/: lib.rs
