[package]
name = "sympy-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19.2", features = ['auto-initialize', 'eyre'] }
macros = { path = "./macros", package = "sympy-rust-macros" }

[workspace]
members = ["macros"]